# white-salary

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Start-Backend.bat  Start-Frontend.bat  Start-TTS-Local.bat  Start-TTS.bat  Start.bat  conf.default.yaml  docker-compose.yml  install.sh  package-lock.json  pyproject.toml  run_server.py  server-setup.sh  安装.bat
config/: expression_map.json  github_config.example.json  image_style.json  memory_settings.json  prompt_templates.json
config/comfyui_workflows/: animatediff.json  img2img.json  svd.json  txt2img.json  txt2img_hires.json  txt2img_pro.json  wan22_i2v.json
docs/: AGENT_RUNTIME_V2.md  CONFIG.md  EXTERNAL_SERVICES.md  INSTALL.md  LOCAL_ADVANCED.md  PLUGIN_MARKET.md  ROADMAP.md  快速上手.md
docs/assets/: README.md
frontend/: index.html  knowledge.html  main.js  package-lock.json  package.json  settings.html
frontend/css/: settings.css  styles.css
frontend/js/: app.js  chat-controller.js  live2d-manager.js  particles.js  settings.js
frontend/tests/: chat-controller.test.js
live2d_models/: README.md
live2d_models/default/: ulvm2_0001.model3.json
live2d_models/white_salary/: model_info.json
plugins/builtin/greeting/: plugin.py
prompts/: system_prompt.example.txt
prompts/templates/: coding_expert.txt  gentle_assistant.txt  tsundere_girl.txt
scripts/: auto_cubism.py  chat_cli.py  check_roles.py  clean_polluted_core.py  create_live2d_model.py  download_and_generate.py  first_run_check.py  full_test.py  generate_layers.py  generate_texture.py  providers.example.json  resolve_gpt_sovits_dir.py  setup_wizard.py  test_apis.py  test_futureppo.py  test_key.py  train_voice.bat  train_voice.py
src/white_salary/: __init__.py
src/white_salary/adapters/: __init__.py
src/white_salary/adapters/asr/: faster_whisper_adapter.py  siliconflow_adapter.py
src/white_salary/adapters/game/: base_game.py
src/white_salary/adapters/llm/: __init__.py  factory.py  openai_compatible.py
src/white_salary/adapters/platform/: bilibili_live.py  group_engager.py  qq_adapter.py  qzone_api.py  qzone_memory.py  sticker_manager.py  sticker_policy.py
src/white_salary/adapters/singing/: rvc_adapter.py
src/white_salary/adapters/tools/: bili_cookie_reader.py  bili_qr_login.py  bilibili_tool.py  browser_tool.py  cloud_config.py  code_executor.py  comfyui_client.py  cosyvoice_client.py  errors.py  external_paths.py  image_gen.py  pc_helpers.py  registry.py  task_planner.py  video_gen.py  web_search.py
src/white_salary/adapters/tts/: factory.py  gpt_sovits_adapter.py  siliconflow_adapter.py  siliconflow_voice.py
src/white_salary/adapters/vad/: energy_vad.py  silero_vad.py
src/white_salary/adapters/vision/: multimodal_adapter.py  screenshot.py
src/white_salary/core/: __init__.py  ai_diary.py  auto_chat.py  bilibili_learning.py  conflict_detector.py  cross_platform.py  exceptions.py  initiative.py  llm_enhancer.py  response_dedup.py  rest_system.py  smart_reply.py  topic_tracker.py
src/white_salary/core/affinity/: manager.py
src/white_salary/core/agent/: chat_agent.py  session_pool.py
src/white_salary/core/filter/: content_filter.py
src/white_salary/core/interfaces/: __init__.py  asr.py  avatar.py  llm.py  singing.py  storage.py  tts.py  types.py  vad.py  vision.py
src/white_salary/core/memory/: affinity_persona.py  auto_classifier.py  condition_engine.py  context_memory.py  context_reviewer.py  conversation_log.py  conversation_memory.py  conversation_rhythm.py  core_commands.py  core_store.py  cross_session.py  dialogue_depth.py  dialogue_evolution.py  disappointment_tracker.py  emotion_memory.py  emotion_tracker.py  emotion_trigger.py  expectation_system.py  expression_learner.py  global_state.py  growth_tracker.py  habits.py  human_like_filter.py  important_store.py  injection_control.py  knowledge_graph.py  language_style.py  llm_extractor.py  long_term_store.py  manager.py  memory_enhancement.py  memory_personality.py  models.py  module_base.py  multi_index.py  multimodal_memory.py  natural_expression.py  nostalgia.py  opinion_system.py  owner_style.py  (+16 more)
src/white_salary/core/message/: processing.py
src/white_salary/core/personality/: character.py
src/white_salary/core/plugins/: base.py  context.py  developer.py  manager.py  market.py  official_plugins.py  safe_executor.py  sandbox.py  security.py
src/white_salary/core/runtime/: store.py  (+8 more)
src/white_salary/infrastructure/: __init__.py
src/white_salary/utils/: __init__.py  async_helpers.py  audio.py  audio_convert.py  text.py
tests/: conftest.py  test_qzone_real.py
tests/integration/: test_core_links.py
tests/unit/: test_affinity.py  test_agent_runtime_v2.py  test_agent_session_pool.py  test_audio_convert.py  test_auto_chat_affinity.py  test_batch4_memory_guard.py  test_batch5_memory_tail.py  test_batch6_runtime_consume.py  test_batch9_behavior.py  test_batch9_media_tools.py  test_bilibili_wiring.py  test_chat_agent.py  test_chat_agent_identity_prompt.py  test_chat_agent_tool_loop_integration.py  test_cloud_config.py  test_cloud_voice_clone.py  test_code_executor.py  test_comfyui_paths.py  test_config.py  test_config_unify.py  test_conflict_detector.py  test_content_filter.py  test_cross_platform_bridge.py  test_emotion_userid.py  test_engagement_lease.py  test_exceptions.py  test_external_tools_paths.py  test_game_api.py  test_image_generation_fallback.py  test_initiative_engine.py  test_interfaces.py  test_linux_installers.py  test_llm_adapter.py  test_llm_health.py  test_memory_extractors.py  test_message_processing.py  test_owner_id.py  test_personality.py  test_plugin_hooks.py  test_plugin_market_paths.py  (+31 more)
(+50 files in other folders)
